# eo-tides

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_dev.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyTMD.pyi  pyproject.toml  sitemap.xml  tox.ini
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: check-links.yml  main.yml  on-release-main.yml  paper-comment.yml  paper.yml  publish.yml  tests.yml  update-changelog.yml  update-version.yml
api/: index.html
changelog/: index.html
credits/: index.html
docs/: api.md  changelog.md  credits.md  index.md  install.md  migration.md  paper.md  setup.md
docs/notebooks/: Case_study_intertidal.ipynb  Example_analysis.ipynb  Model_tides.ipynb  Satellite_data.ipynb  Tidal_modelling.ipynb  Tide_statistics.ipynb  Validating_tides.ipynb  intertidal_map.tif
docs/paper/: paper.bib  paper.md
docs/stylesheets/: extra.css
eo_tides/: __init__.py  eo.py  io.py  model.py  stac.py  stats.py  utils.py  validation.py
install/: index.html
migration/: index.html
notebooks/Case_study_intertidal/: index.html
notebooks/Model_tides/: index.html
notebooks/Satellite_data/: index.html
notebooks/Tide_statistics/: index.html
notebooks/Validating_tides/: index.html
paper/: benchmarking.ipynb  paper.bib  paper.md
search/: search_index.json
setup/: index.html
tests/: conftest.py  test_eo.py  test_model.py  test_stac.py  test_stats.py  test_utils.py  test_validation.py  testing.ipynb
tests/data/: GESLA3_ALL 2.csv  GESLA4_ALL.csv  broome-62650-aus-bom  extra_database.json  model_EOT20custom.json
tests/data/GESLA3.0_ALL/: san_diego_ca-569a-usa-uhslc  sydney_fort_denison-60370-aus-bom
tests/data/GESLA4_ALL/: derby-dydby01-aus-bom
